# openGLprojects

./: CMakeLists.txt  README.md  main.cpp
animation/: wasp_walk.anim
shaders/: shader.frag
skeletons/: dragon.skel
src/: Animation.cpp  Channel.cpp  Cloth.cpp  DOF.cpp  Ground.cpp  Joint.cpp  Keyframe.cpp  Particle.cpp  ParticleSystem.cpp  Skeleton.cpp  Skin.cpp  Sphere.cpp  SpringDamper.cpp  Triangle.cpp  Window.cpp  simParticle.cpp
